--- a/discussion.tex
+++ b/discussion.tex
@@ -5,4 +5,5 @@
     \2 VPN example from intro: if the customer has $n$ backlogged flows, how does it communicate this to the congestion controller so that the CC knows how much to compete?
 \1 New scheduling policies
     \2 Application-aware
+\1 ECMP
 \end{outline}
