--- a/ref.bib
+++ b/ref.bib
@@ -14,7 +14,7 @@
 
 @INPROCEEDINGS{pie,
     author={R. Pan and Natarajan, P. and Piglione, C. and Prabhu, M.S. and Subramanian, V. and Baker, F. and VerSteeg, B.},
-    booktitle={14th International Conference on High Performance Switching and Routing},
+    booktitle = {{High Performance Switching and Routing (HPSR)}},
     title="{PIE: A Lightweight Control Scheme to Address the Bufferbloat Problem}",
     year={2013},
 }
@@ -51,11 +51,12 @@
     publisher={Elsevier}
 }
 
-@techreport{packettrain,
-    title = "Estimating available bandwidth using packet pair probing",
+@misc{packettrain,
     author={Hu, Ningning and Steenkiste, Peter},
+    title = {{Estimating Available Bandwidth Using Packet Pair Probing}},
     year={2002},
-    institution={DTIC Document}
+    institution={DTIC Document},
+    howpublished = {\url{https://www.cs.cmu.edu/\%7Ehnn/papers/igi-tr.pdf}},
 }
 
 @inproceedings{vegas,
@@ -214,7 +215,7 @@ year = {2019},
 @article{ecn,
     author = "Floyd, S.",
     title = {{TCP and Explicit Congestion Notification}},
-    journal = {CCR},
+    journal = {SIGCOMM CCR},
     month = Oct,
     year = 1994,
     volume = 24,
@@ -227,7 +228,6 @@ year = {2019},
     journal={IEEE/ACM Trans. on Networking},
     volume={16},
     number={6},
-    pages={1281--1294},
     year={2008},
 }
 
@@ -460,6 +460,9 @@ howpublished={\url{https://github.com/ngsrinivas/linux-fork/commit/a84f0a6db796a
     author={Koponen, T. and Shenker, S. and Balakrishnan, H. and Feamster, N. and Ganichev, I. and Ghodsi, A. and Godfrey, P.B. and McKeown, N. and Parulkar, G. and Raghavan, B. and others},
     journal = {CCR},
     year = 2011,
+    volume = {41},
+    number = {3},
+    month = jul,
 }
 
 @inproceedings{copa,
@@ -506,15 +509,6 @@ year  = {2011},
     number = {5},
     month = oct,
     year = {2016},
-    issn = {1542-7730},
-    pages = {50:20--50:53},
-    articleno = {50},
-    numpages = {34},
-    url = {http://doi.acm.org/10.1145/3012426.3022184},
-    doi = {10.1145/3012426.3022184},
-    acmid = {3022184},
-    publisher = {ACM},
-    address = {New York, NY, USA},
 }
 
 @misc{ns2,
@@ -532,14 +526,6 @@ howpublished={\url{https://www.isi.edu/nsnam/ns/}},
     number = {3},
     month = jul,
     year = {1998},
-    issn = {0146-4833},
-    pages = {53--69},
-    numpages = {17},
-    url = {http://doi.acm.org/10.1145/293927.293930},
-    doi = {10.1145/293927.293930},
-    acmid = {293930},
-    publisher = {ACM},
-    address = {New York, NY, USA},
 }
 
 @inproceedings{dual,
@@ -606,6 +592,20 @@ howpublished={\url{https://www.isi.edu/nsnam/ns/}},
     author={Leith, DJ and Shorten, R.},
     booktitle={PFLDNet},
     year={2004},
+}
+
+@inproceedings{ftmb,
+  author = {Sherry, Justine and Gao, Peter Xiang and Basu, Soumya and Panda, Aurojit and Krishnamurthy, Arvind and Maciocco, Christian and Manesh, Maziar and Martins, Jo\~{a}o and Ratnasamy, Sylvia and Rizzo, Luigi and Shenker, Scott},
+  title = {{Rollback-Recovery for Middleboxes}},
+  booktitle = {SIGCOMM},
+  year = {2015},
+}
+
+@misc{caida-dataset,
+howpublished={\url{http://www.caida.org/data/passive/passive_2016_dataset.xml}},
+author={CAIDA},
+title={{The CAIDA Anonymized Internet Traces 2016 Dataset - 2016-01-21}},
+year={2016}
 }
 
 @misc{caida,
@@ -979,14 +979,9 @@ booktitle	= {SIGCOMM}
 
 @INPROCEEDINGS{linkoverload,
     author={Iyer, S. and Bhattacharyya, Supratik and Taft, N. and Diot, C.},
-    booktitle={INFOCOM 2003. Twenty-Second Annual Joint Conference of the IEEE Computer and Communications. IEEE Societies},
-    title={{An approach to alleviate link overload as observed on an IP backbone}},
+    booktitle={INFOCOM},
+    title={{An Approach to Alleviate Link Overload as Observed on an IP Backbone}},
     year={2003},
-    volume={1},
-    pages={406-416 vol.1},
-    keywords={routing protocols;telecommunication congestion control;telecommunication links;transport protocols;IP backbone topology;Sprint backbone network;deflection routing algorithm;link failure;link overload;link weights;loop-free deflection paths;network measurements;shortest path routing protocols;Availability;Costs;Load management;Network topology;Resilience;Routing protocols;Spine;Telecommunication traffic;Throughput;Traffic control},
-    doi={10.1109/INFCOM.2003.1208692},
-    ISSN={0743-166X},
 }
 
 @article{sprintip,
@@ -998,14 +993,6 @@ booktitle	= {SIGCOMM}
     number = {6},
     month = nov,
     year = {2003},
-    issn = {0890-8044},
-    pages = {6--16},
-    numpages = {11},
-    url = {http://dx.doi.org/10.1109/MNET.2003.1248656},
-    doi = {10.1109/MNET.2003.1248656},
-    acmid = {2329631},
-    publisher = {IEEE Press},
-    address = {Piscataway, NJ, USA},
 }
 
 @inproceedings{nwksleep,
@@ -1145,8 +1132,7 @@ year = {2014},
 @inproceedings{netfpga-pacer,
 title = {{High-performance implementation of in-network traffic pacing}},
 author = {{Hanay, Y.S. and Dwaraki, A. and Wolf, T.}},
-booktitle = {{High Performance Switching and Routing (HPSR), 2011 IEEE 12th
-                  International Conference on}},
+booktitle = {{High Performance Switching and Routing (HPSR)}},
 year = {2011},
 }
 
@@ -1201,8 +1187,6 @@ year = {2011},
     number = {2},
     month = mar,
     year = {2008},
-    issn = {0146-4833},
-    pages = {69--74},
 }
 
 @article{p4,
@@ -1405,18 +1389,8 @@ author = {{Chelsio Communications}},
 @inproceedings{slow-cc,
  author = {Bansal, Deepak and Balakrishnan, Hari and Floyd, Sally and Shenker, Scott},
  title = {Dynamic Behavior of Slowly-responsive Congestion Control Algorithms},
- booktitle = {Proceedings of the 2001 Conference on Applications, Technologies, Architectures, and Protocols for Computer Communications},
- series = {SIGCOMM '01},
+ booktitle = {SIGCOMM},
  year = {2001},
- isbn = {1-58113-411-8},
- location = {San Diego, California, USA},
- pages = {263--274},
- numpages = {12},
- url = {http://doi.acm.org/10.1145/383059.383080},
- doi = {10.1145/383059.383080},
- acmid = {383080},
- publisher = {ACM},
- address = {New York, NY, USA},
 }
 
 @book{webrtc,
@@ -1429,7 +1403,7 @@ author = {{Chelsio Communications}},
 @inproceedings{mosh,
   title="{Mosh: An Interactive Remote Shell for Mobile Clients}",
   author="Winstein, Keith and Balakrishnan, Hari",
-  booktitle="{USENIX Annual Technical Conference}",
+  booktitle="{USENIX ATC}",
   year={2012},
 }
 
@@ -1619,17 +1593,17 @@ title = {A Secure Environment for Untrusted Helper Applications (Confining the W
   year = {1998}
 }
 
-@article{fifoplus,
+@inproceedings{fifoplus,
  author = {Clark, David D. and Shenker, Scott and Zhang, Lixia},
  title = {{Supporting Real-time Applications in an Integrated Services Packet Network: Architecture and Mechanism}},
- journal = {ACM SIGCOMM Computer Communication Review},
+ booktitle = {SIGCOMM},
  year = {1992},
 } 
 
-@article{virtualClocks,
+@inproceedings{virtualClocks,
  author = {Zhang, L.},
- title = {{Virtual Clock: A New Traffic Control Algorithm for Packet Switching Networks}},
- journal = {ACM SIGCOMM Computer Communication Review},
+ title = {Virtual Clock: A New Traffic Control Algorithm for Packet Switching Networks},
+ booktitle = {SIGCOMM},
  year = {1990},
 } 
 
@@ -1640,18 +1614,16 @@ title = {A Secure Environment for Untrusted Helper Applications (Confining the W
  year = {2003},
 } 
 
-@article{drr,
+@inproceedings{drr,
  author = {Shreedhar, M. and Varghese, George},
- title = {{Efficient Fair Queueing Using Deficit Round Robin}},
- journal = {ACM SIGCOMM Computer Communication Review},
+ title = {Efficient Fair Queueing Using Deficit Round Robin},
+ booktitle = {SIGCOMM},
  year = {1995},
 } 
 
 @inproceedings{pifo,
  author = {Sivaraman, Anirudh and Subramanian, Suvinay and Alizadeh, Mohammad and Chole, Sharad and Chuang, Shang-Tse and Agrawal, Anurag and Balakrishnan, Hari and Edsall, Tom and Katti, Sachin and McKeown, Nick},
  title = {Programmable Packet Scheduling at Line Rate},
- booktitle = {Proceedings of the 2016 ACM SIGCOMM Conference},
+ booktitle = {SIGCOMM},
  year = {2016},
 } 
-
-
